--- a/views/login/index.html
+++ b/views/login/index.html
@@ -43,12 +43,12 @@
           <div class="mb-4 pt-0.5">
             <input type="email" name="email" id="email" placeholder="Email"
               class="block w-full p-4 text-lg rounded-xl bg-transparent outline">
-            <p class="text-sm" id="emailValidation">El nombre de usuario es incorrecto</p>
+            <p class="text-sm" id="emailValidation" style="display: none;">El nombre de usuario es incorrecto</p>
           </div>
           <div class="mb-4 pt-0.5">
             <input type="password" name="password" id="password" placeholder="Password"
               class="block w-full p-4 text-lg rounded-xl bg-transparent outline">
-            <p class="text-sm" id="passValidation">La clave es incorrecta</p>
+            <p class="text-sm" id="passValidation" style="display: none;">La clave es incorrecta</p>
           </div>
           <p id="error-text" class="text-sm text-red-600 pb-10"></p>
           <div class="text-right text-gray-400  flex justify-evenly">
@@ -62,42 +62,6 @@
           </div>
         </form>
       </div>
-
-      <!-- <div class="w-full px-8 md:px-32 lg:px-24" style="display: none;">
-        <form id="form" class="bg-white rounded-md shadow-2xl p-5">
-          <h1 class="text-gray-800 font-bold text-2xl mb-1">Hola de nuevo!</h1>
-          <p class="text-sm font-normal text-gray-600 mb-8">Bienvenido de nuevo</p>
-          <div class="flex items-center border-2 mb-8 py-2 px-3 rounded-2xl">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24"
-              stroke="currentColor">
-              <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2"
-                d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
-            </svg>
-            <input id="email" class=" pl-2 w-full outline-none border-none" type="email" name="email"
-              placeholder="Email" />
-          </div>
-          <div class="flex items-center border-2 mb-12 py-2 px-3 rounded-2xl ">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" viewBox="0 0 20 20"
-              fill="currentColor">
-              <path fillRule="evenodd"
-                d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
-                clipRule="evenodd" />
-            </svg>
-            <input class="pl-2 w-full outline-none border-none" type="password" name="password" id="password"
-              placeholder="Password" />
-          </div>
-          <p id="error-text" class="text-sm text-red-600"></p>
-          <button type="submit"
-            class="block w-full bg-indigo-600 mt-5 py-2 rounded-2xl hover:bg-indigo-700 hover:-translate-y-1 transition-all duration-500 text-white font-semibold mb-2">Login</button>
-          <div class="flex justify-between mt-4">
-            <span
-              class="text-sm ml-2 hover:text-blue-500 cursor-pointer hover:-translate-y-1 duration-500 transition-all">Olvidaste
-              tu contraseña ?</span>
-          </div>
-
-        </form>
-      </div> -->
-
     </div>
   </div>
   <script src="index.js"></script>
