--- a/views/login/index.html
+++ b/views/login/index.html
@@ -22,16 +22,10 @@
     <div class="loading" id="loading" style="display: none;">Loading&#8230;</div>
     <div class="hidden lg:flex w-full lg:w-1/2 login_img_section
           justify-around items-center">
-      <div class=" 
-                  bg-black 
-                  opacity-20 
-                  inset-0 
-                  z-0">
-
-      </div>
+      <div class="bg-black opacity-20 inset-0 z-0"></div>
 
       <div class="w-full mx-auto px-20 flex-col items-center space-y-6">
-        <img src="undraw_my_password_re_ydq7.svg" alt="">
+        <img class="w-full justify-center items-center" src="undraw_mobile_login_re_9ntv (1).svg" alt="">
       </div>
     </div>
     <div class="lg:w-1/2 w-full flex items-center justify-center text-center md:px-16 px-0 z-0 text-white"
@@ -52,7 +46,7 @@
           </div>
           <p id="error-text" class="text-sm text-red-600 pb-10"></p>
           <div class="text-right text-gray-400  flex justify-evenly">
-            <a href="/" class="hover:underline hover:text-gray-100">Regístrate</a>
+            <a href="/signin" class="hover:underline hover:text-gray-100">Regístrate</a>
             <a href="#" class="hover:underline hover:text-gray-100">¿Has olvidado tu contraseña?</a>
           </div>
           <div class="px-4 pb-2 pt-4">
