--- a/views/home/index.html
+++ b/views/home/index.html
@@ -16,15 +16,11 @@
         <div class="loading" id="loading" style="display: none;">Loading&#8230;</div>
         <div class="lg:flex w-1/2 hidden bg-gray-500 bg-no-repeat bg-cover relative items-center"
             style="background-image: url(oreo\ difinitivo_page-0011.jpg);">
-            <div id="notification" class="fixed top-16 rounded-lg p-4 m-2">
-
-            </div>
+            <div id="notification" class="fixed top-16 rounded-lg p-4 m-2"></div>
 
             <div class="absolute bg-black opacity-60 inset-0 z-0"></div>
             <div class="w-full px-24 z-10">
-                <img class="w-full justify-center items-center" src="undraw_mobile_login_re_9ntv (1).svg" alt="">
-                <!-- <h1 class="text-5xl font-bold text-left tracking-wide">Hola!</h1>
-                <p class="sm:text-lg sm:my-2  text-xl my-4">Ingrese sus datos personales para utilizar todas las funciones del sitio web</p> -->
+                <img src="undraw_my_password_re_ydq7.svg" alt="">
             </div>
             <div class="bottom-0 absolute p-4 text-center right-0 left-0 flex justify-center space-x-4">
                 <span>
@@ -93,7 +89,7 @@
                         </p>
                     </div>
                     <div class="text-right text-gray-400  flex justify-evenly">
-                        <a href="/login/" class="hover:underline hover:text-gray-100">Iniciar Sesion</a>
+                        <a href="/" class="hover:underline hover:text-gray-100">Iniciar Sesion</a>
                         <a href="#" class="hover:underline hover:text-gray-100">¿Has olvidado tu contraseña?</a>
                     </div>
                     <div class="px-4 pb-2 pt-4">
