--- a/views/productList/index.html
+++ b/views/productList/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-    <title>Oreo Admin - Usuarios</title>
+    <title>Oreo Admin - Productos</title>
     <style>
         .linkMenu {
             color: #a8bf90
@@ -52,7 +52,7 @@
             </div>
             <div class="col pb-3">
                 <nav class="py-3 mb-3 bg-[#374327] rounded-b-3xl d-flex justify-content-center text-white">
-                    <h2 class="font-['Pally'] text-3xl">Usuarios</h2>
+                    <h2 class="font-['Pally'] text-3xl">Productos</h2>
                 </nav>
                 <div
                     class="bg-transparent px-6 py-8 rounded shadow-2xl w-full text-white  shadow-[#374327] backdrop-blur-sm">
@@ -60,14 +60,14 @@
                         <div class="row align-items-center">
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <h5 class="card-title">Lista de usuarios</h5>
+                                    <h5 class="card-title">Lista de productos</h5>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="d-flex flex-wrap align-items-center justify-content-end gap-2 mb-3">
                                     <div>
                                         <a href="#" data-toggle="modal" data-target="#createUser"
-                                            class="btn btn-primary"><i class="bx bx-plus me-1"></i> Agregar Usuario</a>
+                                            class="btn btn-primary"><i class="bx bx-plus me-1"></i> Agregar Producto</a>
                                     </div>
                                 </div>
                             </div>
@@ -81,8 +81,9 @@
                                             <thead>
                                                 <tr>
                                                     <th scope="col">Nombre</th>
-                                                    <th scope="col">Telefono</th>
-                                                    <th scope="col">Email</th>
+                                                    <th scope="col">Descripcion</th>
+                                                    <th scope="col">Precio</th>
+                                                    <th scope="col">Cantidad</th>
                                                     <th scope="col" style="width: 200px;">Acciones</th>
                                                 </tr>
                                             </thead>
