"Updated output.css, index.html, and index.js files with various changes including z-index adjustment, form input additions and modifications, and JavaScript code additions for form validation and event handling."

--- a/views/userlist/index.html
+++ b/views/userlist/index.html
@@ -111,13 +111,14 @@
                 </div>
                 <div class="modal-body">
                     <form>
+                        <input type="hidden" id="idItem" value="">
                         <div class="form-group">
                             <label for="name" class="col-form-label">Nombre:</label>
-                            <input type="text" class="form-control" id="name">
+                            <input type="text" class="form-control" id="name" required>
                         </div>
                         <div class="form-group">
                             <label for="email" class="col-form-label">Correo:</label>
-                            <input type="email" class="form-control" id="email">
+                            <input type="email" class="form-control" id="email" required>
                         </div>
                         <div class="form-group">
                             <label for="phone" class="col-sm-4 col-form-label">Teléfono:</label>
@@ -131,7 +132,7 @@
                                         <option value="0426">0426</option>
                                     </select>
                                     <input type="tel" class="form-control w-full" style="width: 75%;" id="phoneNumber"
-                                        placeholder="Ingrese su número">
+                                        placeholder="Ingrese su número" required>
                                 </div>
                             </div>
                         </div>
@@ -143,7 +144,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Guardar</button>
+                    <button id="saveForm" type="button" class="btn btn-primary">Guardar</button>
                 </div>
             </div>
         </div>
@@ -158,6 +159,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.4.0/bootbox.min.js"></script>
 <script src="index.js"></script>
 
 </html>
