--- a/views/productList/index.html
+++ b/views/productList/index.html
@@ -66,7 +66,7 @@
                             <div class="col-md-6">
                                 <div class="d-flex flex-wrap align-items-center justify-content-end gap-2 mb-3">
                                     <div>
-                                        <a href="#" data-toggle="modal" data-target="#createUser"
+                                        <a href="#" data-toggle="modal" data-target="#createProduct"
                                             class="btn btn-primary"><i class="bx bx-plus me-1"></i> Agregar Producto</a>
                                     </div>
                                 </div>
@@ -100,51 +100,40 @@
         </div>
     </div>
 
-    <div class="modal fade" id="createUser" tabindex="-1" role="dialog" aria-labelledby="createUserLabel"
+    <div class="modal fade" id="createProduct" tabindex="-1" role="dialog" aria-labelledby="createProductLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="createUserLabel">Nuevo Usuario</h5>
+                    <h5 class="modal-title" id="createProductLabel">Nuevo Usuario</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
                     <form>
+                        <input type="hidden" id="idItem" value="">
                         <div class="form-group">
                             <label for="name" class="col-form-label">Nombre:</label>
                             <input type="text" class="form-control" id="name">
                         </div>
                         <div class="form-group">
-                            <label for="email" class="col-form-label">Correo:</label>
-                            <input type="email" class="form-control" id="email">
+                            <label for="description" class="col-form-label">Descripcion:</label>
+                            <input type="text" class="form-control" id="description">
                         </div>
                         <div class="form-group">
-                            <label for="phone" class="col-sm-4 col-form-label">Teléfono:</label>
-                            <div class="col-span-12">
-                                <div class="input-group">
-                                    <select class="form-control" id="phonePrefix" style="width: 25%;">
-                                        <option value="0412">0412</option>
-                                        <option value="0414">0414</option>
-                                        <option value="0424">0424</option>
-                                        <option value="0416">0416</option>
-                                        <option value="0426">0426</option>
-                                    </select>
-                                    <input type="tel" class="form-control w-full" style="width: 75%;" id="phoneNumber"
-                                        placeholder="Ingrese su número">
-                                </div>
-                            </div>
+                            <label for="price" class="col-form-label">Precio:</label>
+                            <input type="number" class="form-control" id="price">
                         </div>
                         <div class="form-group">
-                            <label for="password" class="col-form-label">Clave:</label>
-                            <input type="password" class="form-control" id="password">
+                            <label for="quantity" class="col-form-label">Cantidad:</label>
+                            <input type="number" class="form-control" id="quantity">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Guardar</button>
+                    <button type="button" id="saveForm" class="btn btn-primary">Guardar</button>
                 </div>
             </div>
         </div>
@@ -159,6 +148,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.4.0/bootbox.min.js"></script>
 <script src="index.js"></script>
 
 </html>
