--- a/views/productList/index.html
+++ b/views/productList/index.html
@@ -129,6 +129,10 @@
                             <label for="quantity" class="col-form-label">Cantidad:</label>
                             <input type="number" class="form-control" id="quantity">
                         </div>
+                        <div class="form-group">
+                            <label for="image" class="col-form-label">Imagen:</label>
+                            <input class="form-control" type="file" id="image">
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
