--- a/views/inicio/index.html
+++ b/views/inicio/index.html
@@ -85,10 +85,10 @@
           <p class="text-center font-bold text-lg h-[15%] ">TEJIDOS HECHO A MANO <br>
              CON MUCHO AMOR <3 </p>
               <div class="flex justify-center h-[55%]">
-                <img class="rounded-3xl p-5" src="https://placehold.co/500x300" alt="">
+                <img class="rounded-3xl p-5 h-72"  src="img/pixelcut-export.jpeg" alt="">
               </div>
               <div class=" flex items-center justify-center h-2/6">
-                    <div class="grid grid-cols-2 gap-9 xl:hidden">
+                    <div class="grid grid-cols-2 gap-9 ">
                         <div class="w-28 h-8 bg-[#485935] text-[#cadbb7] rounded-full flex items-center p-4">Peluches</div>
                         <div class="w-28 h-8 bg-[#485935] text-[#cadbb7] rounded-full flex items-center p-4">Tejidos</div>
                         <div class="w-28 h-8 bg-[#485935] text-[#cadbb7] rounded-full flex items-center p-4">Amigurumis</div>
@@ -104,7 +104,7 @@
               <p class="text-[#cadbb7] text-3xl font-extrabold md:text-5xl lg:text-7xl">Me alegro<br>
                 de conocerte
                 </p>
-                <p class="text-[#cadbb7] text-wrap">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="text-[#cadbb7] text-wrap text-2xl">Aqui encontraras productos unicos para adquirir <br> y ser diseñados a tu gusto.</p>
             </div>
             <img class="rounded-full h-3/5 sm:h-4/5 md:h-full" src="img/photo_4908941134936518061_y (1).jpg" alt="">
           </div>
