--- a/views/inicio/index.html
+++ b/views/inicio/index.html
@@ -6,7 +6,6 @@
     <link href="https://api.fontshare.com/v2/css?f[]=pally@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style/output.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-   
     <title>Oreo_Tohari</title>
 </head>
 <body style="background-image: url(oreo\ difinitivo_page-0011.jpg);">
@@ -143,7 +142,7 @@
 
       <section>
           <div class="flex justify-center p-4">
-            <div class="mt-4 w-[50rem] bg-[#cadbb7] rounded-[60px] p-8"> 
+            <div class="mt-4 w-[50rem] h-[40rem] bg-[#cadbb7] rounded-[60px]"> 
               <div class="flex items-center justify-center pt-4 gap-4 font-['Pally'] font-bold text-2xl text-[#2b351e]">
                 <svg width="50px" height="50px" viewBox="0 0 24 24" fill="#ffffff" xmlns="http://www.w3.org/2000/svg">
                   <path d="M4.46785 10.2658C4.47574 10.3372 4.48376 10.4094 4.49187 10.4823L4.61751 11.6131C4.7057 12.4072 4.78218 13.0959 4.91562 13.6455C5.05917 14.2367 5.29582 14.7937 5.78931 15.2354C6.28281 15.6771 6.86251 15.8508 7.46598 15.9281C8.02694 16.0001 8.71985 16 9.51887 16H14.8723C15.4201 16 15.9036 16 16.3073 15.959C16.7448 15.9146 17.1698 15.8162 17.5785 15.5701C17.9872 15.324 18.2731 14.9944 18.5171 14.6286C18.7422 14.291 18.9684 13.8637 19.2246 13.3797L21.7141 8.67734C22.5974 7.00887 21.3879 4.99998 19.5 4.99998L9.39884 4.99998C8.41604 4.99993 7.57525 4.99988 6.90973 5.09287C6.5729 5.13994 6.24284 5.21529 5.93326 5.34375L5.78941 4.04912C5.65979 2.88255 4.67375 2 3.5 2H3C2.44772 2 2 2.44771 2 3C2 3.55228 2.44772 4 3 4H3.5C3.65465 4 3.78456 4.11628 3.80164 4.26998L4.46785 10.2658Z" fill="#323232"></path>
@@ -153,15 +152,17 @@
               <p>MI PRODUCTO</p>
               </div>
               <div class="flex items-center justify-center pt-16">
-                <div id="product-list" class="grid grid-cols-2 gap-8">
-                 <!-- <div class="h-40 w-40 bg-red-600 rounded-3xl"><img class="rounded-3xl" src="img/spider.jpg" alt=""></div> -->
-                 
-                  
+                <div id="form" class="grid grid-cols-2 gap-8">
+                  <ul id="lista-de-productos"><div class="h-40 w-40 bg-red-600 rounded-3xl"><img class="rounded-3xl" src="img/spider.jpg" alt=""></div></ul>
+                  <ul><div class="h-40 w-40 bg-red-600 rounded-3xl"> <img class="rounded-3xl" src="img/pokemonnn.jpg" alt=""></div></ul>
+                  <ul><div class="h-40 w-40 bg-red-600 rounded-3xl"> <img class="rounded-3xl" src="img/Uzumaki.jpg" alt=""></div></ul>
+                  <ul><div class="h-40 w-40 bg-red-600 rounded-3xl"> <img class="rounded-3xl" src="img/photo_5080618090223479666_y (1).jpg" alt=""></div></ul>
+                </div>
               </div>
           <div>
-            <!-- <div class="flex justify-center pt-20">
-              <button id="course-btn" class="bg-[#485935] hover:hover:bg-[#2a331f] font-bold rounded-3xl h-10 w-40 font-['Pally'] text-[#cadbb7] text-2xl">Ver más...</button>
-            </div> -->
+            <div class="flex justify-center pt-20">
+              <button class="bg-[#485935] hover:hover:bg-[#2a331f] font-bold rounded-3xl h-10 w-40 font-['Pally'] text-[#cadbb7] text-2xl">Ver más...</button>
+            </div>
       </section>
 
       <section class="pt-8">
