--- a/views/inicio/index.html
+++ b/views/inicio/index.html
@@ -1,177 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://api.fontshare.com/v2/css?f[]=pally@400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/output.css">
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-   
-    <title>Oreo_Tohari</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://api.fontshare.com/v2/css?f[]=pally@400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="/style/output.css">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+  <title>Oreo_Tohari</title>
 </head>
+
 <body style="background-image: url(oreo\ difinitivo_page-0011.jpg);">
-      <nav class="fixed top-0 right-0 left-0 h-16 bg-[#374327] rounded-b-3xl">
-        <div class="max-w-7xl h-16 mx-auto flex justify-around items-center">
+  <nav class="fixed top-0 right-0 left-0 h-16 bg-[#374327] rounded-b-3xl">
+    <div class="max-w-7xl h-16 mx-auto flex justify-around items-center">
 
-          <section id="seccion" class="absolute top-16 left-0 w-[24rem] h-0 bg-[#2d3621] font-['Pally'] text-white rounded-3xl flex flex-col justify-between overflow-auto transition-all ease-in duration-300">
-            <div class="flex flex-col justify-center items-center pt-32">
-              <div class="">
-                <button id="sesion-btn" class="w-32 bg-red-900 rounded-lg h-8 font-bold hover:bg-red-950">Cerrar Seccion</button>
-              </div>
-              <div class="flex pt-14">
-                <button class="bg-indigo-900 h-8 w-20 rounded-lg hover:bg-indigo-950" id="volver">Volver</button>
-              </div>
-            </div>
-          </section>
-
-          <button>
-            <svg xmlns="http://www.w3.org/2000/svg" id="cerrar-btn" width="33" height="33" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3"/><circle cx="12" cy="10" r="3"/><circle cx="12" cy="12" r="10"/></svg>
-          </button>
-
-              <section class="absolute top-16 right-0 w-[24rem] h-0 bg-[#2d3621] font-['Pally'] text-white rounded-3xl flex flex-col justify-between overflow-auto transition-all ease-in duration-300" id="cart">
-                <table class="table-fixed text-center border-collapse">
-                    <thead class="h-8 border-b">
-                    <tr>
-                        <th class="table-title">Imagen</th>
-                        <th class="table-title">Nombre</th>
-                        <th class="table-title">Precio</th>
-                        <th class="table-title">Cantidad</th>
-                        <th class="table-title">Eliminar</th>
-                    </tr>
-                     </thead>
-                     <tbody id="table-body"></tbody>
-                     <tr>
-                        <td class="h-24 font-bold p-4 borber-b"></td>
-                        <td class="h-24 font-bold p-4 borber-b"></td>
-                        <td class="h-24 font-bold p-4 borber-b"></td>
-                        <td class="h-24 font-bold p-4 borber-b"></td>
-                        <td class="h-24 font-bold p-4 borber-b"></td>
-                     </tr>
-                </table>
-                <div class="flex justify-evenly">
-                  <button class="h-8 w-36 bg-red-500 hover:hover:bg-red-700 font-bold rounded-3xl" id="table-clear">Vaciar Carrito</button>
-                  <button class="h-8 w-36 bg-indigo-700 hover:hover:bg-indigo-950 font-bold rounded-3xl" id="close-cart">Cerrar Carrito</button>
-                </div>
-
-              </section>
-
-            <div class="text-white text-4xl font-['Pally'] font-black">
-              <p>Oreo_Tohari</p>
-            </div>
-            <div>
-              <button>
-                <svg fill="#ffffff" width="38" height="38" viewBox="0 0 24 24" version="1.2" baseProfile="tiny" xmlns="http://www.w3.org/2000/svg" id="shop-icon">
-
-                  <g>
-                  
-                  <path d="M20.756 5.345c-.191-.219-.466-.345-.756-.345h-13.819l-.195-1.164c-.08-.482-.497-.836-.986-.836h-2.25c-.553 0-1 .447-1 1s.447 1 1 1h1.403l1.86 11.164.045.124.054.151.12.179.095.112.193.13.112.065c.116.047.238.075.367.075h11.001c.553 0 1-.447 1-1s-.447-1-1-1h-10.153l-.166-1h11.319c.498 0 .92-.366.99-.858l1-7c.041-.288-.045-.579-.234-.797zm-1.909 1.655l-.285 2h-3.562v-2h3.847zm-4.847 0v2h-3v-2h3zm0 3v2h-3v-2h3zm-4-3v2h-3l-.148.03-.338-2.03h3.486zm-2.986 3h2.986v2h-2.653l-.333-2zm7.986 2v-2h3.418l-.285 2h-3.133z"></path>
-                  
-                  <circle cx="8.5" cy="19.5" r="1.5"></circle>
-                  
-                  <circle cx="17.5" cy="19.5" r="1.5"></circle>
-                  
-                  </g>
-                  
-                  </svg>
-              </button>
-
-              
-
-              
-            </div>
+      <section id="seccion"
+        class="absolute top-16 left-0 w-[24rem] h-0 bg-[#2d3621] font-['Pally'] text-white rounded-3xl flex flex-col justify-between overflow-auto transition-all ease-in duration-300">
+        <div class="flex flex-col justify-center items-center pt-32">
+          <div class="">
+            <button id="sesion-btn" class="w-32 bg-red-900 rounded-lg h-8 font-bold hover:bg-red-950">Cerrar
+              Seccion</button>
+          </div>
+          <div class="flex pt-14">
+            <button class="bg-indigo-900 h-8 w-20 rounded-lg hover:bg-indigo-950" id="volver">Volver</button>
+          </div>
         </div>
-      </nav>
-      <div class="mt-20 flex justify-center">
-        <div class="w-11/12 h-[29rem] bg-[#cadbb7] rounded-t-3xl rounded-b-3xl font-['Pally']">
-          <p class="text-center font-bold text-lg h-[15%] ">TEJIDOS HECHO A MANO <br>
-             CON MUCHO AMOR <3 </p>
-              <div class="flex justify-center h-[55%]">
-                <img class="rounded-3xl p-5 h-72"  src="img/pixelcut-export.jpeg" alt="">
-              </div>
-              <div class=" flex items-center justify-center h-2/6">
-                    <div class="grid grid-cols-2 gap-9 ">
-                        <div class="w-28 h-8 bg-[#485935] text-[#cadbb7] rounded-full flex items-center p-4">Peluches</div>
-                        <div class="w-28 h-8 bg-[#485935] text-[#cadbb7] rounded-full flex items-center p-4">Tejidos</div>
-                        <div class="w-28 h-8 bg-[#485935] text-[#cadbb7] rounded-full flex items-center p-4">Amigurumis</div>
-                        <div class="w-28 h-8 bg-[#485935] text-[#cadbb7] rounded-full flex items-center p-4">Crochet</div>
-                   </div>
-              </div>
+      </section>
+
+      <button>
+        <svg xmlns="http://www.w3.org/2000/svg" id="cerrar-btn" width="33" height="33" viewBox="0 0 24 24" fill="none"
+          stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3" />
+          <circle cx="12" cy="10" r="3" />
+          <circle cx="12" cy="12" r="10" />
+        </svg>
+      </button>
+
+      <section
+        class="absolute top-16 right-0 w-[24rem] h-0 bg-[#2d3621] font-['Pally'] text-white rounded-3xl flex flex-col justify-between overflow-auto transition-all ease-in duration-300"
+        id="cart">
+        <table class="table-fixed text-center border-collapse">
+          <thead class="h-8 border-b">
+            <tr>
+              <th class="table-title">Nombre</th>
+              <th class="table-title">Descripcion</th>
+              <th class="table-title">Precio</th>
+            </tr>
+          </thead>
+          <tbody id="table-body-cart"></tbody>
+        </table>
+        <div class="flex justify-evenly">
+          <button class="h-8 w-36 bg-red-500 hover:hover:bg-red-700 font-bold rounded-3xl" id="table-clear">Vaciar
+            Carrito</button>
+          <button class="h-8 w-36 bg-indigo-700 hover:hover:bg-indigo-950 font-bold rounded-3xl" id="close-cart">Cerrar
+            Carrito</button>
         </div>
+
+      </section>
+
+      <div class="text-white text-4xl font-['Pally'] font-black">
+        <p>Oreo_Tohari</p>
       </div>
-      <section class="mt-8">
-        <div class="bg-[#485935] font-['Pally'] xl:h-[360px]">
-          <div class="h-72 flex p-4 justify-center gap-10">
-            <div class="flex flex-col w-3/5">
-              <p class="text-[#cadbb7] text-3xl font-extrabold md:text-5xl lg:text-7xl">Me alegro<br>
-                de conocerte
-                </p>
-                <p class="text-[#cadbb7] text-wrap text-2xl">Aqui encontraras productos unicos para adquirir <br> y ser diseñados a tu gusto.</p>
-            </div>
-            <img class="rounded-full h-3/5 sm:h-4/5 md:h-full" src="img/photo_4908941134936518061_y (1).jpg" alt="">
+      <div>
+        <button>
+          <svg fill="#ffffff" width="38" height="38" viewBox="0 0 24 24" version="1.2" baseProfile="tiny"
+            xmlns="http://www.w3.org/2000/svg" id="shop-icon">
+
+            <g>
+
+              <path
+                d="M20.756 5.345c-.191-.219-.466-.345-.756-.345h-13.819l-.195-1.164c-.08-.482-.497-.836-.986-.836h-2.25c-.553 0-1 .447-1 1s.447 1 1 1h1.403l1.86 11.164.045.124.054.151.12.179.095.112.193.13.112.065c.116.047.238.075.367.075h11.001c.553 0 1-.447 1-1s-.447-1-1-1h-10.153l-.166-1h11.319c.498 0 .92-.366.99-.858l1-7c.041-.288-.045-.579-.234-.797zm-1.909 1.655l-.285 2h-3.562v-2h3.847zm-4.847 0v2h-3v-2h3zm0 3v2h-3v-2h3zm-4-3v2h-3l-.148.03-.338-2.03h3.486zm-2.986 3h2.986v2h-2.653l-.333-2zm7.986 2v-2h3.418l-.285 2h-3.133z">
+              </path>
+
+              <circle cx="8.5" cy="19.5" r="1.5"></circle>
+
+              <circle cx="17.5" cy="19.5" r="1.5"></circle>
+
+            </g>
+
+          </svg>
+        </button>
+
+
+
+
+      </div>
+    </div>
+  </nav>
+  <div class="mt-20 flex justify-center">
+    <div class="w-11/12 h-[29rem] bg-[#cadbb7] rounded-t-3xl rounded-b-3xl font-['Pally']">
+      <p class="text-center font-bold text-lg h-[15%] ">TEJIDOS HECHO A MANO <br>
+        CON MUCHO AMOR <3 </p>
+          <div class="flex justify-center h-[55%]">
+            <img class="rounded-3xl p-5 h-72" src="img/pixelcut-export.jpeg" alt="">
           </div>
+    </div>
+  </div>
+  <section class="mt-8">
+    <div class="bg-[#485935] font-['Pally'] xl:h-[360px]">
+      <div class="h-72 flex p-4 justify-center gap-10">
+        <div class="flex flex-col w-3/5">
+          <p class="text-[#cadbb7] text-3xl font-extrabold md:text-5xl lg:text-7xl">Me alegro<br>
+            de conocerte
+          </p>
+          <p class="text-[#cadbb7] text-wrap text-2xl">Aqui encontraras productos unicos para adquirir <br> y ser
+            diseñados a tu gusto.</p>
         </div>
-      </section>
+        <img class="rounded-full h-3/5 sm:h-4/5 md:h-full" src="img/photo_4908941134936518061_y (1).jpg" alt="">
+      </div>
+    </div>
+  </section>
 
-      <section>
-          <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-4">
-            <div>
-              <img src="img/PATO 500 500_page-0001.jpg">  
-            </div>
-            <div class="bg-[#cadbb7] flex justify-center items-center">
-              <p class="font-['Pally'] font-extrabold text-4xl lg:text-5xl text-[#1a1f12]">Patongo</p>
-            </div>
-            <div>
-              <img src="img/MIKE 500 500_page-0001.jpg">
-            </div>
-            <div class="bg-[#cadbb7] flex justify-center items-center">
-              <p class="font-['Pally'] font-extrabold text-4xl lg:text-5xl text-[#1a1f12]">Mike</p>
-            </div>
-            <div class="bg-[#cadbb7] flex justify-center items-center">
-              <p class="font-['Pally'] font-extrabold text-4xl lg:text-5xl text-[#1a1f12]">Rosas</p>
-            </div>
-            <div>
-              <img src="img/ROSAS 500 500_page-0001.jpg">
-            </div>
-            <div class="bg-[#cadbb7] flex justify-center items-center">
-              <p class="font-['Pally'] font-extrabold text-4xl lg:text-5xl text-[#1a1f12]">Kiwi</p>
-            </div>
-            <div>
-              <img src="img/KIWI 500 500_page-0001.jpg">
-            </div>
+  <section>
+    <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-4">
+      <div>
+        <img src="img/PATO 500 500_page-0001.jpg">
+      </div>
+      <div class="bg-[#cadbb7] flex justify-center items-center">
+        <p class="font-['Pally'] font-extrabold text-4xl lg:text-5xl text-[#1a1f12]">Patongo</p>
+      </div>
+      <div>
+        <img src="img/MIKE 500 500_page-0001.jpg">
+      </div>
+      <div class="bg-[#cadbb7] flex justify-center items-center">
+        <p class="font-['Pally'] font-extrabold text-4xl lg:text-5xl text-[#1a1f12]">Mike</p>
+      </div>
+      <div class="bg-[#cadbb7] flex justify-center items-center">
+        <p class="font-['Pally'] font-extrabold text-4xl lg:text-5xl text-[#1a1f12]">Rosas</p>
+      </div>
+      <div>
+        <img src="img/ROSAS 500 500_page-0001.jpg">
+      </div>
+      <div class="bg-[#cadbb7] flex justify-center items-center">
+        <p class="font-['Pally'] font-extrabold text-4xl lg:text-5xl text-[#1a1f12]">Kiwi</p>
+      </div>
+      <div>
+        <img src="img/KIWI 500 500_page-0001.jpg">
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="flex justify-center p-4">
+      <div class="mt-4 w-[50rem] bg-[#cadbb7] rounded-[60px] p-8">
+        <div class="flex items-center justify-center pt-4 gap-4 font-['Pally'] font-bold text-2xl text-[#2b351e]">
+          <svg width="50px" height="50px" viewBox="0 0 24 24" fill="#ffffff" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M4.46785 10.2658C4.47574 10.3372 4.48376 10.4094 4.49187 10.4823L4.61751 11.6131C4.7057 12.4072 4.78218 13.0959 4.91562 13.6455C5.05917 14.2367 5.29582 14.7937 5.78931 15.2354C6.28281 15.6771 6.86251 15.8508 7.46598 15.9281C8.02694 16.0001 8.71985 16 9.51887 16H14.8723C15.4201 16 15.9036 16 16.3073 15.959C16.7448 15.9146 17.1698 15.8162 17.5785 15.5701C17.9872 15.324 18.2731 14.9944 18.5171 14.6286C18.7422 14.291 18.9684 13.8637 19.2246 13.3797L21.7141 8.67734C22.5974 7.00887 21.3879 4.99998 19.5 4.99998L9.39884 4.99998C8.41604 4.99993 7.57525 4.99988 6.90973 5.09287C6.5729 5.13994 6.24284 5.21529 5.93326 5.34375L5.78941 4.04912C5.65979 2.88255 4.67375 2 3.5 2H3C2.44772 2 2 2.44771 2 3C2 3.55228 2.44772 4 3 4H3.5C3.65465 4 3.78456 4.11628 3.80164 4.26998L4.46785 10.2658Z"
+              fill="#323232"></path>
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M14 19.5C14 18.1193 15.1193 17 16.5 17C17.8807 17 19 18.1193 19 19.5C19 20.8807 17.8807 22 16.5 22C15.1193 22 14 20.8807 14 19.5Z"
+              fill="#323232"></path>
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M5 19.5C5 18.1193 6.11929 17 7.5 17C8.88071 17 10 18.1193 10 19.5C10 20.8807 8.88071 22 7.5 22C6.11929 22 5 20.8807 5 19.5Z"
+              fill="#323232"></path>
+          </svg>
+          <p>MI PRODUCTO</p>
+        </div>
+        <div class="flex items-center justify-center pt-16">
+          <div id="product-list" class="grid grid-cols-2 gap-8">
+            <!-- <div class="h-40 w-40 bg-red-600 rounded-3xl"><img class="rounded-3xl" src="img/spider.jpg" alt=""></div> -->
+
+
           </div>
-      </section>
-
-      <section>
-          <div class="flex justify-center p-4">
-            <div class="mt-4 w-[50rem] bg-[#cadbb7] rounded-[60px] p-8"> 
-              <div class="flex items-center justify-center pt-4 gap-4 font-['Pally'] font-bold text-2xl text-[#2b351e]">
-                <svg width="50px" height="50px" viewBox="0 0 24 24" fill="#ffffff" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M4.46785 10.2658C4.47574 10.3372 4.48376 10.4094 4.49187 10.4823L4.61751 11.6131C4.7057 12.4072 4.78218 13.0959 4.91562 13.6455C5.05917 14.2367 5.29582 14.7937 5.78931 15.2354C6.28281 15.6771 6.86251 15.8508 7.46598 15.9281C8.02694 16.0001 8.71985 16 9.51887 16H14.8723C15.4201 16 15.9036 16 16.3073 15.959C16.7448 15.9146 17.1698 15.8162 17.5785 15.5701C17.9872 15.324 18.2731 14.9944 18.5171 14.6286C18.7422 14.291 18.9684 13.8637 19.2246 13.3797L21.7141 8.67734C22.5974 7.00887 21.3879 4.99998 19.5 4.99998L9.39884 4.99998C8.41604 4.99993 7.57525 4.99988 6.90973 5.09287C6.5729 5.13994 6.24284 5.21529 5.93326 5.34375L5.78941 4.04912C5.65979 2.88255 4.67375 2 3.5 2H3C2.44772 2 2 2.44771 2 3C2 3.55228 2.44772 4 3 4H3.5C3.65465 4 3.78456 4.11628 3.80164 4.26998L4.46785 10.2658Z" fill="#323232"></path>
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M14 19.5C14 18.1193 15.1193 17 16.5 17C17.8807 17 19 18.1193 19 19.5C19 20.8807 17.8807 22 16.5 22C15.1193 22 14 20.8807 14 19.5Z" fill="#323232"></path>
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M5 19.5C5 18.1193 6.11929 17 7.5 17C8.88071 17 10 18.1193 10 19.5C10 20.8807 8.88071 22 7.5 22C6.11929 22 5 20.8807 5 19.5Z" fill="#323232"></path>
-                  </svg>
-              <p>MI PRODUCTO</p>
-              </div>
-              <div class="flex items-center justify-center pt-16">
-                <div id="product-list" class="grid grid-cols-2 gap-8">
-                 <!-- <div class="h-40 w-40 bg-red-600 rounded-3xl"><img class="rounded-3xl" src="img/spider.jpg" alt=""></div> -->
-                 
-                  
-              </div>
           <div>
             <!-- <div class="flex justify-center pt-20">
               <button id="course-btn" class="bg-[#485935] hover:hover:bg-[#2a331f] font-bold rounded-3xl h-10 w-40 font-['Pally'] text-[#cadbb7] text-2xl">Ver más...</button>
             </div> -->
-      </section>
+  </section>
 
-      <section class="pt-8">
-        <div class="h-44 w-full bg-[#374327] rounded-t-3xl font-['Pally'] font-black flex justify-center text-4xl text-[#cadbb7]">
-          <p class="text-center">Enviame un mensaje <br>
-          <3 </p>
-        </div>
-      </section>
-      <script src="index.js"></script>
+  <section class="pt-8">
+    <div
+      class="h-44 w-full bg-[#374327] rounded-t-3xl font-['Pally'] font-black flex justify-center text-4xl text-[#cadbb7]">
+      <p class="text-center">Enviame un mensaje <br>
+        <3 </p>
+    </div>
+  </section>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.4.0/bootbox.min.js"></script>
+  <script src="index.js"></script>
 </body>
-</html>
 
- 
+</html>
